zeit.cms changes
================

0.9.8 (unrelesed)
-----------------

- Related konnte nicht mehr in der Lightbox ausgewählt werden
  (ScrollStateRestorer not defined).
- Bug beim Referenzieren von Objekten behoben, z.B. ging ein Image als Related
  nicht, unbekannte Resourcen konnten nicht verlinkt werden (Systemfehler).

0.9.7 (2008-04-07)
------------------

- Die Bedingungen für die Veröffentlichung werden explizit geprüft: Ein Objekt
  kann nur veröffentlicht werden, wenn es "eilig" ist oder die Status auf ja /
  nicht nötig stehen (bug #4068).
- Objekte können zurückgezogen werden (aus der Veröffentlichung, bug #4081)
- Suche kann die Workflowstatus "bearbeitet" und "Bilder hinzugefügt" suchen
  (bug #4083).
- Die Not Found (404) Seite sieht jetzt wieder ansprechend aus.
- Systemfehler werden jetzt etwas schöner und informativer angezeigt (bug
  #4033).
- Bilder haben jetzt eine URL (bug #4047).
- Bug in Clickcounter-Cache behoben: today.xml wird jetzt auch gecacht.
- Indikator im Dateilisting zeigt den Veröffentlichungszustand: nicht
  veröffentlicht (rot), veröffentlicht (grün) oder veröffentlicht mit
  Änderungen im CMS (gelb/orange). (bug #3954)
- Metadaten-Vorschau zeigt sämtliche Workflow-Attribute auf der rechten Seite
  (bug #3954).


0.9.6 (2008-04-03)
------------------

- DefaultView fuer Infobox hinzugefügt.
- Assets eines Artikels werden jetzt in eigenem Formular bearbeitet.
- Automatisches Anlegen des Ordners mit den Workingcopy-Vorschau-Daten (bug
  #4056)
- Standardlöschdatum eines Bildes "in 7 Tagen" (bug #4019)
- Das Unterressort ist jetzt auch eine Drop-Down. Es ist abhängig von der
  Auswahl des Ressorts (bug #4036).
- Wenn ein Artikel ein Ressort mit Umlaut hatte, welches nicht in der
  ressort.xml enthalten war ab es einen Systemfehler beim logging.


0.9.5 (2008-03-25)
------------------

- Besser sichtbar gemacht ob ein Objekt gesperrt ist (bug #4025)
- Sortierung in Listen: Jahres/Ausgaben-Ordner zuerst, Groß-/Kleinschreibung